--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <header class="header">
         <div class="header-left">
-            <h3 class="title">
+            <h3 class="header-title">
                 Let's make beautiful flowers a part of your life.
             </h3>
-            <p class="description">
+            <p class="header-description">
                 It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
                 of
@@ -29,6 +29,39 @@
             <img class="header-img" src="styles/asset/pngwing 10.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="feature-flower">
+            <h3 class="feature-title">Our Featured Flowers</h3>
+            <p class="feature-description">
+                It is a long established fact that a reader will be distracted by the readable <br>content of a page
+                when
+                looking at its layout.
+            </p>
+
+            <div class="feature-container">
+                <div class="item1">
+                    <div class="flower1">
+                        <img src="styles/asset/pngwing 6.png" alt="">
+                    </div>
+                    <h5 class="flower-description">Pink flower tree</h5>
+                </div>
+
+                <div class="item2">
+                    <div class="flower2">
+                        <img src="styles/asset/pngwing 5.png" alt="">
+                    </div>
+                    <h5 class="flower-description">Pink flower tree</h5>
+                </div>
+                <div class="item3">
+                    <div class="flower3">
+                        <img src="styles/asset/pngwing 7.png" alt="">
+                    </div>
+                    <h5 class="flower-description">Pink flower tree</h5>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
