added hot deals section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
             </div>
         </section>
 
+        <section class="hot-deals">
+            <div class="deal-left">
+                <h3 class="feature-title">Hot Deal ! Sale Up To 25% Off</h3>
+                <p class="feature-descripton">
+                    It is a long established fact that a reader will be distracted by the readable <br>content of a
+                    page
+                    when looking at its layout.
+                </p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="deal-right">
+                <img src="styles/asset/pngwing 8.png" alt="">
+            </div>
+
+        </section>
     </main>
 </body>
 
