added instagram section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
         <section class="hot-deals">
             <div class="deal-left">
-                <h3 class="feature-title">Hot Deal ! Sale Up To 25% Off</h3>
-                <p class="feature-descripton">
+                <h3 class="feature-title">Hot Deal ! Sale Up To 25% <span style="color: #E55473;">Off</span></h3>
+                <p class="feature-description">
                     It is a long established fact that a reader will be distracted by the readable <br>content of a
                     page
                     when looking at its layout.
@@ -75,6 +75,21 @@
                 <img src="styles/asset/pngwing 8.png" alt="">
             </div>
 
+        </section>
+
+        <section class="instagram">
+            <h3 class="feature-title">Instagram</h3>
+            <p class="feature-description">
+                It is a long established fact that a reader will be distracted by the readable <br>content of a
+                page
+                when looking at its layout.
+            </p>
+            <div class="insta-img">
+                <div class="imag"><img src="styles/asset/Flower 01.png" alt=""></div>
+                <div class="imag"><img src="styles/asset/Rectangle 4.png" alt=""></div>
+                <div class="imag"><img src="styles/asset/Rectangle 5.png" alt=""></div>
+                <div class="imag"><img src="styles/asset/Rectangle 6.png" alt=""></div>
+            </div>
         </section>
     </main>
 </body>
