added instagram section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <div class="imag"><img src="styles/asset/Rectangle 6.png" alt=""></div>
             </div>
         </section>
+        <section class="latest">
+
+        </section>
     </main>
 </body>
 
