added latest deal section

--- a/index.html
+++ b/index.html
@@ -91,8 +91,20 @@
                 <div class="imag"><img src="styles/asset/Rectangle 6.png" alt=""></div>
             </div>
         </section>
-        <section class="latest">
 
+        <section class="latest">
+            <div class="latest-container">
+                <div class="latest-info">
+                    <h3 class="feature-title">Get The Latest Deals</h3>
+                    <p class="feature-description">
+                        $30 coupon for first shopping
+                    </p>
+                </div>
+                <div class="latest-contact">
+                    <input class="email" type="email" placeholder="Enter your email here...." name="" id="">
+                    <button class="btn">Subscribe</button>
+                </div>
+            </div>
         </section>
     </main>
 </body>
