--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <div class="header-left">
             <h3 class="header-title">
                 Let's make beautiful flowers a part of your life.
@@ -107,6 +107,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <h3 class="footer-title"><span style="color: #E55473;">Flower</span>Shop</h3>
+            <p class="footer-description">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when
+                looking at its layout.
+            </p>
+            <p class="footer-copyright">
+                <small> @2020-2023, FlowerShop.com. All rights reserved.</small>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
