added feedback section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,24 @@
                 </div>
             </div>
         </section>
+
+        <section class="feedback">
+            <h3 class="feature-title">Our Customer's Feedback</h3>
+            <div class="person-container">
+                <div class="person">
+                    <p class="person-feedback">Very good price compared to market.</p>
+                    <h4 class="person-name">Sayed</h4>
+                </div>
+                <div class="person">
+                    <p class="person-feedback">Nice collection of flowers.</p>
+                    <h4 class="person-name">Joy</h4>
+                </div>
+                <div class="person">
+                    <p class="person-feedback">Delivered on time.</p>
+                    <h4 class="person-name">Rupok</h4>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
